deploy/inject-example.yml
apiVersion: v1
kind: Pod
metadata:
  name: keel
spec:
  containers:
    - name: keel
    // ...

    // 注入 sidecar 后
    - name: tools
      image: "daocloud.io/loulan/kntool-sidecar:latest"
      securityContext:
        capabilities:
          add:
            - NET_ADMIN
