deploy/deployment.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kntool
  labels:
    app: kntool
webhooks:
  - name: mutating-kntool.loulan.me
    clientConfig:
      service:
        name: kntool
        namespace: "kntool"
        path: "/mutate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvRENDQW9pZ0F3SUJBZ0lVTDlUZ2pURUNwSWx1Sy8xV0p6ZU1haXVUTjVrd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2FERUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEV6QVJCZ05WQkFvVENrdDFZbVZ5Ym1WMFpYTXhDekFKQmdOVkJBc1RBa05CTVJNd0VRWURWUVFECkV3cExkV0psY201bGRHVnpNQjRYRFRJd01USXhNakUzTlRnd01Gb1hEVEkxTVRJeE1URTNOVGd3TUZvd2FERUwKTUFrR0ExVUVCaE1DVlZNeER6QU5CZ05WQkFnVEJrOXlaV2R2YmpFUk1BOEdBMVVFQnhNSVVHOXlkR3hoYm1ReApFekFSQmdOVkJ [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        kntool-inject: enabled
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
    timeoutSeconds: 5
---
apiVersion: v1
kind: Namespace
metadata:
  name: kntool
spec: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kntool
  namespace: kntool
spec:
  selector:
    app: kntool
  ports:
    - port: 443
      targetPort: webhook-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kntool
  namespace: kntool
spec:
  selector:
    matchLabels:
      app: kntool
  template:
    metadata:
      labels:
        app: kntool
    spec:
      containers:
        - name: kntool
          image: "zhaihuailou/kntool:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: webhook-api
          volumeMounts:
            - name: config
              mountPath: "/config"
              # readOnly: true
          args:
            - kntool
            - -cert-file
            - /config/server.crt
            - -key-file
            - /config/server.key
      volumes:
        - name: config
          configMap:
            name: kntool-config
            items:
              - key: "cert"
                path: "server.crt"
              - key: "key"
                path: "server.key"
